adding favorite reads section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
 |  ents about cases, investigations and much more.                                            |
 |                                                                                             |
 |  • <a href="./read/theRansomwarePursuit.html">The Stranger Beside Me: The Ransomware Pursuit.</a>                                          |
-|    - 03/10/2023, 04-minutes read.                                                           |
+|    - 2023-10-03, 04-minutes read.                                                           |
+|                                                                                             |
+|---------------------------------------------------------------------------------------------|
+|                                                                                             |
+|   FAV0R1TE R3ADS  									      |
+|  _______________________                                                                    |
+|                                                                                             |
+|  • Hacker's Manifsto: <a href="http://phrack.org/issues/7/3.html">http://phrack.org/issues/7/3.html</a>                                     |
+|    - The Mentor, 1986-09-25.                                                                |
 |                                                                                             |
 |--------------------------------------------+------------------------------------------------|
 |                                            |                                                |
