added Jan24 updates and background music

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>MaYanK GiTe (drapl0n)</title>
 </head>
 <body>
+    <audio autoplay>
+        <source src="./assets/whiterabbit.ogg" type="audio/ogg">
+    </audio>
     <div class="container">
 	<div class="ascii-frame">
 		<pre>
@@ -110,12 +113,12 @@
 |--------------------------------------------+------------------------------------------------|
 |                                            |                                                |
 |   W0RK EXPER1ENC3  	  		     |	 AWARD$ 	      			      |
-|   _______________________                  |  _______________________                       |
+|  _______________________                   |  _______________________                       |
 |                                            |                                                |
 |  ▲ Forensics Analyst.                      |   • CEH Hall of Fame 2023.                     |
-|  | - CTI, DFIR, CyberCrime Inverstigator.  |     - Finalist.	                              |
+|  | - CTI, DFIR, CyberCrime Investigator.   |     - Finalist.	                              |
 |  |                                         |                                                |
-|  • Cyber Forensic Intern.                  |   • Hak5 Paylod Hero Awards 2022.              |
+|  • Cyber Forensics Intern.                 |   • Hak5 Paylod Hero Awards 2022.              |
 |    - First Responder, Researcher.          |     - Best Payload. Category: Execution.       |
 |                                            |                                                |
 |--------------------------------------------+------------------------------------------------|
@@ -123,16 +126,19 @@
 |   UPD4T3S                                                                                   |
 |   _______________________                                                                   |
 |                                                                                             |
-|  This section is reserved for the periodic updates that I will be posting and will be main  |
-|  tained in the upcoming year 2024.                                                          |
-|                                                                                             |
+|   • January 2024:                                                                           |
+|     - Received a big care package from Hak5.                                                |
+|     - Eagerly waiting to write payloads in DuckyScript 3.0.                                 |
+|     - Engaged in red team operations recently. Got access to cyber-physical systems & the   |
+|       power grid of the client's network infrastructure.                                    |
+|     - Done nothing much this month. Waiting to finish up some important stuff and keep it   |
+|       aside so that I can start studying and researching on planned subject areas.          |
 |                                                                                             |
 |   • December 2023:                                                                          |
 |     - Getting used to mapping threats using Mitre's ATT&CK framework.	                      |
 |     - Porting my payloads in C.                                                             |
 |     - Abusing winAPI and NTAPI.                                                             |
 |     - Dealing with end semester exams.						      |
-|                                                                                             |
 |                                                                                             |
 +--------------------------------------------+------------------------------------------------+
 |                                      Let's Get Social!                                      |
